# pybrid-computing

./: .clang-format  .clang-tidy  .cruft.json  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  404.html  Dockerfile.python-poetry  Dockerfile.sphinx-build  LICENSE.DE  LICENSING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  search.html
build-scripts/: README.md  prepare-cython.py  regenerate_proto.sh  requirements-build.txt  setup.py.template
build-scripts/linux-x86_64/: Dockerfile  cibuildwheel.toml  docker-build.sh
developer-guide/: index.html
developer-guide/data-and-messaging-protocol/: index.html
developer-guide/device-object-representation/: index.html
developer-guide/native-networking-code/: index.html
docs/: conf.py  index.md  index.rst
docs/developer-guide/: data-and-messaging-protocol.md  device-object-representation.md  index.md  native-networking-code.md
docs/examples/: first_circuit.py
docs/getting-started/: index.md  installation.md  quickstart.md
docs/hardware-architecture/: c-block.md  configuration-items.md  hierarchy-from-cluster-to-the-redac.md  i-block.md  list-of-blocks.md  sh-block.md  t-block.md  u-block.md
docs/js/: mermaid-init.js
docs/overview/: index.md  place-in-the-software-stack.md  public-and-developer-version.md  pybrid.md
docs/pyanabrid/: commandline.rst  installation.rst  prerequisites.rst  quickstart.rst
docs/pybrid-computing/: commandline.rst  installation.rst  prerequisites.rst  quickstart.rst
docs/redac/: commandline.rst  configurations.rst  entities.rst  hybrid-controller.rst  index.rst  low-level.rst  protocol.rst  user-programs.rst
docs/user-guide/: circuits.md  index.md  running.md
examples/entities/: lucidac-daniel.apb  mredac-18-13-3B.apb  mredac-18-16-43.apb  redac-tobias.apb
examples/lucipy/: constant-integration.py  decay.py  euler.py  hindmarsh-rose-neuron.py  hyperchaos.py  lorenz.py  lorenz96.py  mathieu.py  roessler.py  sine-extra.py  sine.py  sprott.py  sprott2.py  van-der-pol.py
examples/mredac/: sine.py
examples/proxy/: client-requests.json  config.json  list-iredac0-prod.txt  list-lucidac-daniel.txt  list-lucistack-bernd.txt  list-mredac-single.txt  list-redac-0.txt  list-redac-1.txt  list-redac-tobias.txt  map-lucidac-coupling.json  map-lucihub-eth.json  map-redac-0.json  map-redac-jung.json  map-redac-redacc.json  map-redac-tobias.json  part-lucidac-coupling.json  part-lucidac-eth.json  partitioning-redac-0.json  partitioning-redac-1.json  sinusoidal-00-00-00-00-00-00.json  sinusoidal-00-00-00-00-00-02.json  sinusoidal-split-config-compiler.json  sinusoidal-split-config.json
examples/shell/: redac-special-signals.txt
hardware-architecture/: index.html
hardware-architecture/c-block/: index.html
hardware-architecture/configuration-items/: index.html
hardware-architecture/hierarchy-from-cluster-to-the-redac/: index.html
hardware-architecture/i-block/: index.html
hardware-architecture/list-of-blocks/: index.html
hardware-architecture/m-blocks/: index.html
hardware-architecture/sh-block/: index.html
hardware-architecture/t-block/: index.html
hardware-architecture/u-block/: index.html
overview/: index.html
overview/place-in-the-software-stack/: index.html
overview/public-and-developer-version/: index.html
overview/pybrid/: index.html
proto/: main.proto
pyanabrid/redac/: carrier.py  cluster.py  computations.py  computer.py  controller.py  data.py  display.py  elements.py  entities.py  modules.py  run.py
pybrid/lucidac/: __init__.py  computer.py  controller.py  front_panel.py
pybrid/lucipy/: __init__.py  _compat.py  circuits.py  computer.py  helpers.py  lucidac.py
pybrid/mock/: __init__.py  config.py  dummy_dac.py
pybrid/redac/: __init__.py  carrier.py  cluster.py  computations.py  computer.py  controller.py  data.py  detect.py  device.py  display.py  dummy.py  entities.py  modules.py  monitor.py  partitioning.py  port.py  proxy.py  router.py  run.py  sync.py
pybrid/sim/: __init__.py  computer.py  config.py  controller.py
search/: search_index.json
tests/: conftest.py  helpers.py  test_binary_build.py  test_import.py  test_router.py
tests/data/: harmonic_legacy.json  harmonic_pb.apb  harmonic_pb.json
tests/device/: __init__.py  test_basic_validation.py  test_device_functions.py  test_error_propagation.py  test_multi_cluster.py
tests/e2e/: __init__.py  test_cli_direct.py  test_cli_proxy.py  test_lucipy.py
tests/hardware/: test_sign_convention.py
tests/integration/: __init__.py  test_bindings_gil.py  test_controller_multidevice.py  test_data_channel_integration.py  test_legacy_parser.py  test_lucipywrapper_multi.py  test_lucipywrapper_single.py  test_lucistack_multi.py  test_lucistack_proxy.py  test_lucistack_single.py  test_native_control_channel_reconnect.py  test_native_data_channel_rebuild.py  test_native_proxy.py  test_proxy.py  test_proxy_memory_stability.py  test_register_external_entities.py  test_serialization.py  test_session_calibration.py  test_session_data_channel.py  test_unified_serializer.py
tests/lucipy/: test_circuit_connect.py  test_circuit_deprecations.py  test_circuit_elements.py  test_circuit_measure.py  test_circuit_probe.py  test_circuit_routing.py  test_circuit_to_computer.py
tests/mock/: test_basic_handlers.py  test_config.py  test_dummy_dac.py  test_dummy_dac_lucidac_mode.py  test_dummydac_native.py  test_run_execution.py  test_server_skeleton.py  test_simulate_op_time.py  test_udp_streaming.py
tests/redac/: test_router.py
tests/run/: test_distributed_run_state.py
tests/transport/: test_unix_socket_transport.py
tests/unit/: __init__.py  test_adc_probe_validator.py  (+18 more)
user-guide/: index.html
util/: refresh-protobuf.sh  serial.py
(+216 files in other folders)
