[project]
name = "pybrid-computing"
requires-python = ">=3.11,<4.0"
version = "0.11.2"
description = "Library to interact with analog computers and analog-digital hybrid computers, in particular the LUCIDAC and REDAC computers made by anabrid"
authors = [
  {name = "Michael Steck", email = "pybrid-code@anabrid.com"}
]
readme = "README.md"
license = "MIT OR GPL-2.0-or-later"
homepage = "https://anabrid.com/"
documentation = "https://anabrid.dev/docs/pybrid/"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Terminals :: Serial",
  "Operating System :: POSIX"
]
dependencies = [
  "anyio>=4.11.0",
  "asyncclick>=8.2.2.2",
  "inflection>=0.5.1",
  "matplotlib>=3.10.6",
  "packaging>=25.0",
  "protobuf>=6.31.1",
  "pydantic>=2.11.9",
  "pyftdi>=0.57.1",
  "pyi>=0.1.0",
  "zeroconf>=0.147.2",
  "prompt-toolkit>=3.0.52",
  "pyserial-asyncio>=0.6"
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "black>=25.9.0",
  "sphinx>=8.2.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-click~=6.1.0",
  "sphinx-rtd-theme>=3.0.2",
  "sphinxcontrib-plantuml>=0.31",
  "pytest-asyncio>=1.2.0"
]

[project.scripts]
pybrid = 'pybrid.cli.base:entrypoint'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pybrid"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"