[project]
name = "pybrid-workspace"
version = "0.0.0"
requires-python = ">=3.11,<4.0"
description = "uv workspace root for pybrid-computing packages"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pybrid-computing = { workspace = true }
pybrid-computing-native = { workspace = true, editable = false }

[dependency-groups]
dev = [
  "pybrid-computing",
  "pybrid-computing-native",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "black>=25.9.0",
  "sphinx>=8.2.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-click~=6.1.0",
  "sphinx-rtd-theme>=3.0.2",
  "sphinxcontrib-plantuml>=0.31",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s --log-cli-level=ERROR"
pythonpath = ["."]
markers = [
  "device: Tests requiring real hardware (TEST_*_ENDPOINT)",
  "benchmark: Performance/stress tests (excluded from default run)",
  "slow: Tests that take longer to run",
  "lucidac: Tests specific to LUCIDAC",
  "redac: Tests specific to REDAC",
  "sim: Tests specific to simulator",
]
